// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TextField Defaults play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rd:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rc:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rc:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:rb:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
  >
    <label id="labelId-:r5:"
           class="_label_348na_5"
           for="htmlid"
    >
      Navn
    </label>
    <input id="htmlid"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           data-testid="123ID"
           autocomplete="off"
           form="formid123"
    >
    <div id="textFieldErrorId-:r3:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithAutoCompleteInputModeNameAndPlaceholder play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rv:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ru:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ru:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="given-name"
           inputmode="text"
           placeholder="Kari Nordmann"
           name="test_name"
    >
    <div id="textFieldErrorId-:rt:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname">
    <label id="labelId-:r8:"
           class="_label_348na_5    dummyClassname"
           for="textFieldTextboxId-:r7:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r8:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r9:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r9:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17   dummyClassname">
      beskrivelse
    </div>
    <input id="textFieldTextboxId-:r7:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21 dummyClassname"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r6:"
           aria-invalid="true"
    >
    <div id="textFieldErrorId-:r6:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15 dummyClassname">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDataList play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2l:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2k:"
    >
      nettlesere
    </label>
    <input id="textFieldTextboxId-:r2k:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           list="browsers"
    >
    <div id="textFieldErrorId-:r2j:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
  <datalist id="browsers">
    <option value="Edge">
    </option>
    <option value="Firefox">
    </option>
    <option value="Chrome">
    </option>
    <option value="Opera">
    </option>
    <option value="Safari">
    </option>
  </datalist>
</div>
`;

exports[`Tester/TextField WithDefaultValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rp:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ro:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ro:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rn:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDefaultValueAndThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rs:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rr:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rr:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           value="10 000"
    >
    <div id="textFieldErrorId-:rq:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDescription play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1o:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1n:"
    >
      Navn
    </label>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r1n:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r1m:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithDisabled play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rj:"
           class="_label_348na_5"
           for="textFieldTextboxId-:ri:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:ri:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           disabled
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rh:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithErrorMessage play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1k:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1j:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1j:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           aria-describedby="textFieldErrorId-:r1i:"
           aria-invalid="true"
    >
    <div id="textFieldErrorId-:r1i:"
         aria-live="assertive"
         aria-atomic="true"
    >
      <div class="_errorMessage_vog41_15">
        <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _errorMessageIcon_vog41_25"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 14h-2v-4h2v4Zm0 4h-2v-2h2v2ZM1 21h22L12 2 1 21Z">
          </path>
        </svg>
        <p class="_errorMessageText_vog41_29">
          Navn er obligatorisk
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithEventHandlers play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2e:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2d:"
    >
      TextField har blitt blurret
    </label>
    <input id="textFieldTextboxId-:r2d:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpText play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r24:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r23:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r24:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r25:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r25:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r23:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r22:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpTextAndDescription smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r29:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r28:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r29:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2a:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2a:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div class="_description_10ldw_17">
      En liten beskrivelse tekst
    </div>
    <input id="textFieldTextboxId-:r28:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r27:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2h:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r2g:"
    >
      Navn
    </label>
    <button class="_button_19ayz_1 _button_extraSmall_19ayz_34 _button_outlined_19ayz_98 _helpButton_10ldw_27"
            data-brightness="default"
            type="button"
            aria-describedby="labelId-:r2h:"
            aria-expanded="false"
    >
      <svg class="_systemIcon_dry7n_2 _systemIcon_small_dry7n_5 _icon_19ayz_26"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r2i:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r2i:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <input id="textFieldTextboxId-:r2g:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r2f:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithHideLabel play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1r:"
           class="_label_348na_5  _srOnly_348na_18"
           for="textFieldTextboxId-:r1q:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1q:"
           class="_textbox_1hi30_5"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r1p:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithMinAndMaxLength play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1b:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1a:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1a:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           maxlength="50"
           minlength="10"
    >
    <div id="textFieldErrorId-:r19:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithPattern play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1e:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1d:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1d:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           pattern="[a-z]"
    >
    <div id="textFieldErrorId-:r1c:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithReadOnly play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r12:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r11:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r11:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           readonly
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:r10:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRef play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r2:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           name="dummyNameForwardedFromRef"
    >
    <div id="textFieldErrorId-:r0:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequired play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r15:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r14:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r14:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           required
    >
    <div id="textFieldErrorId-:r13:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithRequiredAndMark smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r18:"
           class="_label_348na_5 _label_required_348na_12"
           for="textFieldTextboxId-:r17:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r17:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           required
    >
    <div id="textFieldErrorId-:r16:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
exports[`Tester/TextField WithRows play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1n:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1m:"
    >
      Navn
    </label>
    <textarea id="textFieldTextboxId-:r1m:"
              class="_textbox_3tcss_5  _textbox_multiline_3tcss_33  _textboxMarginTop_3tcss_21"
              autocomplete="off"
              rows="4"
    >
    </textarea>
    <div id="textFieldErrorId-:r1l:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithTextAreaAutoSizeInModal play-test 1`] = `
<div data-test-block="true">
  <button class="_button_6ybyo_1 _button_primary_6ybyo_1"
          type="button"
  >
    <span class="_buttonText_6ybyo_69">
      Vis modal
    </span>
  </button>
  <dialog class="_modal_i27cp_5"
          aria-labelledby="modalHeadingId-:r2s:"
          data-variant="outline"
          open
  >
    <div tabindex="-1"
         class="_modalContainer_i27cp_23"
    >
      <button class="_button_19ayz_1 _button_medium_19ayz_42  _closeButton_i27cp_58"
              data-brightness="default"
              type="button"
      >
        <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_19ayz_26"
             viewbox="0 0 24 24"
             focusable="false"
             aria-labelledby="svgtitle-:r2t:"
             aria-hidden="false"
             role="img"
        >
          <title id="svgtitle-:r2t:">
            Lukk dialogvindu
          </title>
          <path d="M19 17.61L13.89 12.5L19 7.39L17.11 5.5L12 10.61L6.89 5.5L5 7.39L10.11 12.5L5 17.61L6.89 19.5L12 14.39L17.11 19.5L19 17.61Z">
          </path>
        </svg>
      </button>
      <div class="_modalPaddingL_i27cp_48">
        <h1 id="modalHeadingId-:r2s:"
            class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 _modalHeading_i27cp_26"
        >
          Modal med textarea
        </h1>
        <div class>
          <label id="labelId-:r30:"
                 class="_label_348na_5"
                 for="textFieldTextboxId-:r2v:"
          >
            Navn
          </label>
          <textarea id="textFieldTextboxId-:r2v:"
                    class="_textbox_3tcss_5  _textbox_multiline_3tcss_33 _textbox_autosize_3tcss_37 _textboxMarginTop_3tcss_21"
                    autocomplete="off"
                    style="height: 0px;"
          >
          </textarea>
          <div id="textFieldErrorId-:r2u:"
               aria-live="assertive"
               aria-atomic="true"
          >
          </div>
        </div>
      </div>
    </div>
  </dialog>
</div>
`;

=======
>>>>>>> 7b4ddc74 (fjern textarea fra TextField)
exports[`Tester/TextField WithThousandSeparator play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r1u:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r1t:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r1t:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r1s:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithThousandSeparatorAndNegativeValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:r21:"
           class="_label_348na_5"
           for="textFieldTextboxId-:r20:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:r20:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:r1v:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithValue play-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rm:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rl:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rl:"
           class="_textbox_1hi30_5  _textboxMarginTop_1hi30_21"
           autocomplete="off"
           value="Kari Nordmann"
    >
    <div id="textFieldErrorId-:rk:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/TextField WithVariantLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <label id="labelId-:rg:"
           class="_label_348na_5"
           for="textFieldTextboxId-:rf:"
    >
      Navn
    </label>
    <input id="textFieldTextboxId-:rf:"
           class="_textbox_1hi30_5 _textbox_large_1hi30_24 _textboxMarginTop_1hi30_21"
           autocomplete="off"
    >
    <div id="textFieldErrorId-:re:"
         aria-live="assertive"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
